fix: maximize modal image size, fix backdrop click scroll jump, lock touch scroll, PDF modal full height

--- a/home/static/home/css/style.css
+++ b/home/static/home/css/style.css
@@ -1137,6 +1137,7 @@ body.modal-open {
     position: fixed;
     width: 100%;
     height: 100%;
+    touch-action: none;
 }
 
 /* The Modal (background) */
@@ -1155,9 +1156,9 @@ body.modal-open {
 
 #pdfModal .modal-content {
     width: 100%;
-    height: 100%;
+    height: calc(100vh - 40px);
     max-width: 100%;
-    max-height: 100%;
+    max-height: calc(100vh - 40px);
     margin: 0;
     border: none;
 }
@@ -1176,9 +1177,9 @@ body.modal-open {
 /* Modal Content (Image) */
 .modal-content {
     display: block;
+    width: 95vw;
     max-width: 95vw;
     max-height: calc(100vh - 120px);
-    width: auto;
     height: auto;
     object-fit: contain;
     z-index: 5001;
@@ -1238,6 +1239,7 @@ body.modal-open {
         padding: 45px 2px 5px;
     }
     .modal-content {
+        width: 100vw;
         max-width: 100vw;
         max-height: calc(100vh - 100px);
     }
